Implemented map feature using osmdroid; removed unused imports; removed unused project dependecies; removed unused classes 'Geofence*'

--- a/SherloQL/app/src/main/res/layout/activity_map.xml
+++ b/SherloQL/app/src/main/res/layout/activity_map.xml
@@ -2,13 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_map_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".bin.Map" >
 
-    <fragment
+    <org.osmdroid.views.MapView
         android:id="@+id/map"
-        class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         map:layout_constraintEnd_toEndOf="parent"
@@ -18,15 +18,13 @@
         android:id="@+id/fromMap2Home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/raetsel_shape"
         android:backgroundTintMode="@color/color1"
         android:text="Home"
-        map:layout_constraintBottom_toBottomOf="@+id/map"
-        map:layout_constraintEnd_toEndOf="parent"
-        map:layout_constraintHorizontal_bias="0.049"
         map:layout_constraintStart_toStartOf="parent"
-        map:layout_constraintTop_toTopOf="parent"
-        map:layout_constraintVertical_bias="0.023" />
+        map:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
