--- a/SherloQL/app/src/main/res/layout/fragment_dialogue.xml
+++ b/SherloQL/app/src/main/res/layout/fragment_dialogue.xml
@@ -25,15 +25,15 @@
             android:textSize="24dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/text"
-            app:layout_constraintStart_toStartOf="parent"></TextView>
+            app:layout_constraintStart_toStartOf="parent"/>
 
         <TextView
             android:id="@+id/text"
-            android:layout_width="359dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="0dp"
             android:layout_marginTop="524dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="0dp"
             android:background="@drawable/text_shape"
             android:minHeight="200dp"
             android:text=""
